// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variables.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
    --prop: 10px;
    prop1: var(--prop);
    prop2: var(--my-var, --my-background, pink);
    prop3: calc(var(--prop) * 1px);
}

@supports (--foo: green) {
    body {
        color: var(--varName);
    }
}

=====================================output=====================================
.foo {
  --prop: 10px;
  prop1: var(--prop);
  prop2: var(--my-var, --my-background, pink);
  prop3: calc(var(--prop) * 1px);
}

@supports (--foo: green) {
  body {
    color: var(--varName);
  }
}

================================================================================
`;

exports[`variables.scss 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
  --#{$prop}: 10px;
  #{$prop}: 10px;
  prop1: var(--#{$var});
  prop2: var(#{$var}, --my-#{$var}, pink);
  prop3: calc(var(--#{$var}) * 1px);
}

@supports (--#{$prop}: green) {
  body {
    color: var(--#{$var});
  }
}

=====================================output=====================================
.foo {
  --#{$prop}: 10px;
  #{$prop}: 10px;
  prop1: var(--#{$var});
  prop2: var(#{$var}, --my-#{$var}, pink);
  prop3: calc(var(--#{$var}) * 1px);
}

@supports (--#{$prop}: green) {
  body {
    color: var(--#{$var});
  }
}

================================================================================
`;
